View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025561 | Open CASCADE | OCCT:Coding | public | 2014-12-08 09:19 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025561: OCCT can't compile with OCCT_DEBUG flag | ||||
Description | This bug caused by integration of CR24988 branch when the following code has been deleted: gp_Pnt2d Value(const Standard_Real t) const { return Function_Value (t,mySurface,myCurve,myInitialCurve2d,myDistTol3d,myTolU,myTolV); } It is necessary to restore this piece of code. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25561 has been created by aml. SHA-1: 490a32a77bf6cfb3bf1ef0574998b6bd9eb729b8 Detailed log of new commits: Author: aml Date: Mon Dec 8 09:22:35 2014 +0300 0025561: OCCT can't compile with OCCT_DEBUG flag Restored function "Value" with old signature used in OCCT_DEBUG block. |
|
Dear abv, Please check current state of branch CR25561. |
|
and please change product version to 6.8.1 |
|
Nor remarks, please test compilation and integrate (no non-regression testing is needed) |
|
Dear BugMaster, Branch CR25561 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms in optimize and debug modes. SHA-1: 490a32a77bf6cfb3bf1ef0574998b6bd9eb729b8 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 0 (1 on master) |
|
Branch CR25561 has been deleted by inv. SHA-1: 490a32a77bf6cfb3bf1ef0574998b6bd9eb729b8 |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-08 09:19 |
|
New Issue | |
2014-12-08 09:19 |
|
Assigned To | => aml |
2014-12-08 09:24 | git | Note Added: 0035111 | |
2014-12-08 09:25 |
|
Note Added: 0035112 | |
2014-12-08 09:25 |
|
Assigned To | aml => abv |
2014-12-08 09:25 |
|
Status | new => resolved |
2014-12-08 09:26 |
|
Note Added: 0035113 | |
2014-12-08 09:45 |
|
Note Added: 0035115 | |
2014-12-08 09:45 |
|
Assigned To | abv => bugmaster |
2014-12-08 09:45 |
|
Status | resolved => reviewed |
2014-12-08 09:50 |
|
Product Version | 7.0.0 => 6.9.0 |
2014-12-08 09:50 |
|
Target Version | 7.0.0 => 6.9.0 |
2014-12-08 11:08 |
|
Assigned To | bugmaster => apv |
2014-12-10 15:24 |
|
Note Added: 0035264 | |
2014-12-10 15:24 |
|
Assigned To | apv => bugmaster |
2014-12-10 15:24 |
|
Status | reviewed => tested |
2014-12-10 15:25 |
|
Test case number | => Not needed |
2014-12-16 16:46 | bugmaster | Changeset attached | => occt master fa0f5a55 |
2014-12-16 16:46 | bugmaster | Status | tested => verified |
2014-12-16 16:46 | bugmaster | Resolution | open => fixed |
2015-01-26 12:36 | git | Note Added: 0036589 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |