0025561: OCCT can't compile with OCCT_DEBUG flag

Restored function "Value" with old signature used in OCCT_DEBUG block.